Update README and solve issue relating to width size on mobile.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,6 +42,12 @@
   }
 }
 
+@media screen and (max-width: 450px) {
+  .appbar {
+    @apply text-3xl;
+  }
+}
+
 /* Scrollbar */
 @layer utilities {
   /* width */
